# stock-box

./: .env.example  .gitignore  README.md  config.yaml  dashboard.py  pyproject.toml
specs/: SPEC.md  StockSense_Spec_v1.0.docx  TECH_STACK.md  schema.json
stocksense/: __init__.py  data.py  indicators.py  pipeline.py  scorer.py  scraper.py  sentiment.py  storage.py
tests/: test_indicators.py  test_scorer.py  test_scraper.py  test_sentiment.py  test_storage.py
