[project]
name = "stocksense"
version = "1.0.0"
description = "Configurable stock analysis pipeline: technical indicators + AI news sentiment + weighted scoring."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "anthropic>=0.40",
    "playwright>=1.45",
    "pyyaml>=6.0",
    "streamlit>=1.36",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
alpaca = ["alpaca-py>=0.20"]
api = ["fastapi>=0.110", "uvicorn>=0.30"]
scheduler = ["apscheduler>=3.10"]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stocksense"]

[tool.pytest.ini_options]
testpaths = ["tests"]
